<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/navigation_drawer_menu_item0" />
        <item
            android:id="@+id/nav_hot"
            android:icon="@drawable/ic_hot"
            android:title="@string/navigation_drawer_menu_item1" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_discovery"
            android:title="@string/navigation_drawer_menu_item2" />
        <item
            android:id="@+id/nav_nodes"
            android:icon="@drawable/ic_nodes"
            android:title="@string/navigation_drawer_menu_item3" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_favourite"
            android:title="@string/navigation_drawer_menu_item4" />
    </group>

</menu>
